Added API support to GET from and POST to in-memory datastore or persisted DB using simplified audio file entities based on Entity Framework Core. Added Logging (NLog). Added simple "mail" service interface and implementations to notify of new files added to DB context. Added dummy data for in-memory datastore & seed data for persisted (local) DB. Added some keys to appsettings.json for mailTo and mailFrom addresses, and also DB context connection string. Next step is to work on File Upload widget to add actual .WAV files.

--- a/DotNetCoreSpeechToTextDemo/Views/Home/Index.cshtml
+++ b/DotNetCoreSpeechToTextDemo/Views/Home/Index.cshtml
@@ -21,6 +21,20 @@
     </div>
 </div>
 <div class="row" id="div1"></div>
+<hr />
+<div class="row">
+    <div class="col-md-5">
+        <h4>Upload audio file (WAV format only) <span class="glyphicon glyphicon-circle-arrow-up"></span></h4>
+        <ul>
+            <li>
+                Use the upload button below to transcribe an audio (.wav) recording into a .txt file
+            </li>
+        </ul>
+        <div style="border: 2px solid gray; height: 55px; width: 225px; display: flex; justify-content: center; align-items: center;">
+            File upload widget goes here
+        </div>
+    </div>
+</div>
 
 <script>
     $(document).ready(function () {
